@@ -1,16 +1,12 @@
 package com.objects.marketbridge.order.controller.response;
 
-import com.objects.marketbridge.order.domain.Order;
-import com.objects.marketbridge.order.domain.OrderDetail;
+import com.objects.marketbridge.order.service.dto.CancelResponseDto;
 import lombok.Builder;
 import lombok.Getter;
-import lombok.NoArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
-@NoArgsConstructor
 public class OrderCancelResponse {
 
     private List<ProductInfoResponse> productResponses;
@@ -22,21 +18,17 @@ public class OrderCancelResponse {
         this.cancelRefundInfoResponse = cancelRefundInfoResponse;
     }
 
-    public static OrderCancelResponse of(List<OrderDetail> orderDetails, Order order) {
+    public static OrderCancelResponse of(CancelResponseDto serviceDto) {
         return OrderCancelResponse.builder()
-                .productResponses(orderDetails.stream()
-                        .map(ProductInfoResponse::of)
-                        .collect(Collectors.toList())
+                .productResponses(
+                        serviceDto.getProductInfoResponseDtos()
+                                .stream()
+                                .map(ProductInfoResponse::of)
+                                .toList()
                 )
-                .cancelRefundInfoResponse(CancelRefundInfoResponse.builder()
-                        .refundFee(0L)
-                        .deliveryFee(0L) // TODO 주문에서 배송비 가져오기
-                        .discountPrice(order.getTotalUsedCouponPrice()) // TODO 할인금액 쿠폰만 가능?
-                        .totalPrice(orderDetails.stream()
-                                .mapToLong(OrderDetail::getPrice)
-                                .sum()
-                        )
-                        .build())
+                .cancelRefundInfoResponse(
+                        CancelRefundInfoResponse.of(serviceDto.getCancelRefundInfoResponseDto())
+                )
                 .build();
     }
 
